# FileTransmit

./: .gitignore  CMakeLists.txt  CommSystem.sln  LICENSE  Network.sln  README.md  Socket.sln  makefile  开发文档.docx  设计思路.pptx
DataPool/: CMakeLists.txt  ConcurrencyPool.cpp  ConcurrencyPool.h  DataPool.vcxproj  Semaphore.h
EPOLL/: epoll_server.c  test_tcp_client.cpp
FileTransmit/: CMakeLists.txt  FileTransmit.vcxproj  FileTransmit.vcxproj.filters  md5.cpp  md5.h  socket.cpp  socket.h  transmit.cpp  transmit.h
HTTP/: common.h  http_server.c  httpd.c  httpd.h  sync_client.c
InstantMessage/: CMakeLists.txt  InstantMessage.vcxproj  InstantMessage.vcxproj.filters  chat.cpp  chat.h
MemoryPool/: ConcurrencyPool.cpp  MemoryPool.vcxproj  MemoryPool.vcxproj.filters  Semaphore.cpp  Semaphore.h
Reactor/: callback.c  callback.h  common.h  createsocket.c  createsocket.h  makefile  reactor.c  reactor.h  reactor_run.c  test_tcp_client.cpp
Socket/: Socket.vcxproj  Socket.vcxproj.filters  main.cpp  md5.cpp  md5.h  socket.cpp  socket.h  utils.cpp
TCP/: raw_client.c  raw_server.c  select_server.c  signal_io.c  tcp_header.h  test_tcp_client.cpp
UDP/: raw_client.c  raw_server.c  udp_header.h  udp_recv_file.c  udp_send_file.c
Utils/: Utils.vcxproj  Utils.vcxproj.filters  main.cpp  utils.cpp  utils.h
configuration/: CMakeLists.txt  config.cpp  config.h  configuration.vcxproj  configuration.vcxproj.filters
macro/: export.h
network/: main.cpp  network.vcxproj  network.vcxproj.filters  utilities.cpp  utilities.h  utils.cpp  utils.h
system/: UdpSocket.h
